@@ -797,3 +797,58 @@ IRCK3_earthquake.7 = {
         }
     }
 }
+
+#526 Antioch earthquake
+IRCK3_earthquake.8 = {
+    type = country_event
+    title = IRCK3_earthquake.8.t
+    desc = IRCK3_earthquake.8.desc
+    picture = natural_disaster
+    fire_only_once = yes
+    goto_location = p:790 # Antioch
+
+    trigger = {
+    	owns = 790 # Antioch
+    	AND = {
+   			current_date >= 1279.1.1 #526 AD
+   			current_date < 1280.1.1
+    	}
+    }
+
+    immediate = {
+    }
+
+    option = {      
+        name = IRCK3_earthquake.8.a
+        add_treasury = {
+			subtract = root.has_monthly_income
+			multiply = 4
+		}
+		current_ruler = {
+			add_popularity = popularity_medium
+		}
+        p:790 = { # Antioch
+	        custom_tooltip = "earthquake_medium.tt"
+			add_province_modifier = {
+				name = province_diminishment_earthquake_ravaged
+				duration = 730
+			}
+			hidden_effect = {
+				province_pop_disaster_medium = yes
+			}
+        }
+    }
+    option = {
+        name = IRCK3_earthquake.8.b
+        p:790 = { # Antioch
+	        custom_tooltip = "earthquake_medium.tt"
+			add_province_modifier = {
+				name = province_diminishment_earthquake_ravaged
+				duration = 2555
+			}
+			hidden_effect = {
+				province_pop_disaster_medium = yes
+			}
+        }
+    }
+}
