@@ -16,14 +16,18 @@ l_english:
  IRCK3_earthquake.4.a:0 "We must aid our brethren in the damaged areas!"
  IRCK3_earthquake.4.b:0 "At least Vesuvius hasn't erupted..."
  IRCK3_earthquake.5.t:0 "The Quakes in Antioch"
- IRCK3_earthquake.5.desc:0 "A powerful earthquake has struck Syria. Antioch and surrounding areas have been devastated with a great loss of life and property. The city of Apamea has also been destroyed by the earthquake and Beirut has suffered significant damage. \n\nOur people are looking for us to set aside some of our funds to try and help those in need, to make the best out of the situation."
+ IRCK3_earthquake.5.desc:0 "A powerful earthquake has struck Syria. Antioch and surrounding areas have been devastated with a great loss of life and property. The city of Apamea has also been destroyed by the earthquake and Beirut has suffered significant damage.\n\nOur people are looking for us to set aside some of our funds to try and help those in need, to make the best out of the situation."
  IRCK3_earthquake.5.a:0 "We must help the people in the damaged cities!"
  IRCK3_earthquake.5.b:0 "This is a rich area, they will survive."
  IRCK3_earthquake.6.t:0 "The Quakes in Galilee"
- IRCK3_earthquake.6.desc:0 "A powerful earthquake has struck Galilee. Sepphoris, north-northwest of Nazareth, has been severely damaged. The city of Petra has also been fatally damaged. \n\nOur people are looking for us to set aside some of our funds to try and help those in need, to make the best out of the situation."
+ IRCK3_earthquake.6.desc:0 "A powerful earthquake has struck Galilee. Sepphoris, north-northwest of Nazareth, has been severely damaged. The city of Petra has also been fatally damaged.\n\nOur people are looking for us to set aside some of our funds to try and help those in need, to make the best out of the situation."
  IRCK3_earthquake.6.a:0 "We must help the people in the damaged areas!"
  IRCK3_earthquake.6.b:0 "It will work itself out in time."
  IRCK3_earthquake.7.t:0 "The Quakes in Crete"
- IRCK3_earthquake.7.desc:0 "A powerful earthquake has struck Crete. It has caused widespread destruction in Greece, northern Libya, Egypt and Cyprus. \n\nOur people are looking for us to set aside some of our funds to try and help those in need, to make the best out of the situation."
+ IRCK3_earthquake.7.desc:0 "A powerful earthquake has struck Crete. It has caused widespread destruction in Greece, northern Libya, Egypt and Cyprus.\n\nOur people are looking for us to set aside some of our funds to try and help those in need, to make the best out of the situation."
  IRCK3_earthquake.7.a:0 "We must help the people in the damaged areas!"
  IRCK3_earthquake.7.b:0 "It will work itself out in time."
+ IRCK3_earthquake.8.t:0 "The Quakes in Antioch"
+ IRCK3_earthquake.8.desc:0 "A powerful earthquake has struck Antioch. It was followed by a fire that destroyed most of the buildings left standing by the earthquake.\n\nOur people are looking for us to set aside some of our funds to try and help those in need, to make the best out of the situation."
+ IRCK3_earthquake.8.a:0 "We must help the people in the damaged areas!"
+ IRCK3_earthquake.8.b:0 "It will work itself out in time."
