@@ -1,8 +1,9 @@
-NEXT
+NEXT "Ammianus Marcellinus"
 - Added the 62 AD Pompeii earthquake
 - Added the 115 AD Antioch earthquake
 - Added the 363 AD Galilee earthquake
 - Added the 365 AD Crete earthquake
+- Added the 526 AD Antioch earthquake
 
 2020-02-02 v1.0 "Pliny the Elder"
 - Set the end date to 1522 AUC (769 AD)
